--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-10-16  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* libltdl/ltdl.c (lt_dlopen): Do not search paths when the
+	specified library is not just a basename.
+
 1999-10-10  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* libtool.m4 (AC_PATH_FILE): new macro replaces
