--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,18 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.3d: 1999-??-??; CVS version 1.3c, Libtool team:
-* Support for Compaq Tru64 V5.0.
 * Start of support code for cross-compiling to win32.
-* Improved support for mingw32, NetBSD, FreeBSD and Unixware.
+* Improved support for mingw32.
 * New "-no-install" flag to avoid the use of executable wrapper scripts.
 * New --with-pic flag to control the generation of PIC/non-PIC code.
 * New --build flag to ltconfig to help with build cross compilation
   environments is inherited from --build flag passed to configure.
 * Various bugfixes
+
+New in 1.3.4: 1999-??-??, CVS version 1.3.3a, Libtool team:
+* Support for Compaq Tru64 V5.0.
+* Improved support for NetBSD, FreeBSD and Unixware.
+* Many fine bugfixes.
 
 New in 1.3b: 1999-07-02; CVS version 1.3a, Libtool team:
 * Complete inter-library dependencies support. It's now possible
