--- a/THANKS
+++ b/THANKS
@@ -29,6 +29,8 @@ Manfred Weichel <Manfred.Weichel@pdb.siemens.de>
 Marc J. Fraioli <fraioli@dg-rtp.dg.com>
 Mark Kettenis <kettenis@phys.uva.nl>
 Ossama Othman <othman@cs.wustl.edu>
+Olly Betts <olly@muscat.co.uk>
+Pavel Roskin <pavel_roskin@geocities.com>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
 Steven M. Schultz <sms@wlv.iipo.gtegsc.com>
