--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,4 @@ Foundation.
 Gordon Matzigkeit.  Designed and implemented libtool.
 Alexandre Oliva <oliva@dcc.unicamp.br>.  Co-maintainer.
 Thomas Tanner <tanner@ffii.org>.  Co-maintainer.
-Gary V. Vaughan <gary@oranda.demon.co.uk>.  Co-maintainer.
+Gary V. Vaughan <garyv@oranda.demon.co.uk>.  Co-maintainer.
