--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.3.4: ????-??-??, CVS version 1.3.3a, Libtool team:
+New in 1.3.4: 1999-??-??, CVS version 1.3.3a, Libtool team:
 * Support for Compaq Tru64 V5.0.
+* Improved support for NetBSD, FreeBSD and Unixware.
 * Many fine bugfixes.
 
 New in 1.3.3: 1999-07-02, CVS version 1.3.2a, Libtool team:
