* ltconfig.in (irix6*): Do not override deplibs_check_method here.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-12-03  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
+	* ltconfig.in (irix6*): Do not override deplibs_check_method
+	here.
+
 	* libtool.m4: Do not AC_SUBST anything other than LIBTOOL.
 
 1999-11-20  Michael Forster  <email@michael-forster.de>
