--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-12-03  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
+	* libtool.m4: Use host when --target is not specified.
+
 	* configure.in: AC_SUBST variables that are used by ltconfig to
 	build libtool.
 
