--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-12-07  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	* config.guess: updated from autoconf cvs.
+	* config.sub: ditto.
+	* NEWS: inserted todays date.
+	* configure.in: bumped version to 1.3.4.
+	* doc/PLATFORMS: tested on all the machines I have access to.
+
 1999-12-06  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	From Tim Mooney  <mooney@dogbert.cc.ndsu.NoDak.edu>
@@ -9,7 +17,6 @@
 
 	* ltconfig.in (hardcode_into_libs):  Remove the commented out
 	hardcode_into_libs reference.  Doh!
-
 1999-12-03  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* ltconfig.in (ac_compile): Use $ac_ext instead of .c.
