--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-12-07  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* configure.in: bumped version to 1.3.4a
+
 	GNU libtool 1.3.4 was released.
 
 	* config.guess: updated from autoconf cvs.
