--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-12-12  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	* ltconfig.in (cygwin*, mingw*, export_symbols_cmds): keep any
+	DATA tags associated with symbols by recent dlltool.
+	(cygwin*, mingw*, archive_expsym_cmds): Honor any DATA tags
+	found in the symbol list.
+	Reported by Jon Leichter <jon@symas.com>.
+
 1999-12-07  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* configure.in: bumped version to 1.3.4a
@@ -21,6 +29,7 @@
 
 	* ltconfig.in (hardcode_into_libs):  Remove the commented out
 	hardcode_into_libs reference.  Doh!
+
 1999-12-03  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* ltconfig.in (ac_compile): Use $ac_ext instead of .c.
